corrected spacing

--- a/style.css
+++ b/style.css
@@ -21,8 +21,6 @@ img {
   width: 75%;
 }
 .wrap {
-  width: 1060px;
-  height:auto;
   margin: auto;
   text-align:center;
   position:relative;
